// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly for computers/tablets 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky MuiAppBar-colorPrimary css-anjygb-Header MuiPaper-elevation4"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular toolBar MuiToolbar-gutters"
  >
    <div>
      <img
        alt="MeilleursAgents PRO"
        className="logo"
        src={[Function]}
      />
      <div
        className="MuiChip-root css-1we3e77-UnreadMessagesCounter MuiChip-colorPrimary"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiChip-icon MuiChip-iconColorPrimary"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </svg>
        <span
          className="MuiChip-label"
        >
          <strong>
            73
          </strong>
        </span>
      </div>
    </div>
    <div
      className="MuiInputBase-root MuiInput-root MuiInput-underline css-kkkune-AgencySelector"
      onClick={[Function]}
    >
      <select
        className="MuiNativeSelect-root MuiNativeSelect-select MuiInputBase-input MuiInput-input"
        onAnimationStart={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
      >
        <option
          className="options"
          value={101}
        >
          Agence #101
        </option>
        <option
          className="options"
          value={102}
        >
          Agence #102
        </option>
        <option
          className="options"
          value={103}
        >
          Agence #103
        </option>
      </select>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiNativeSelect-icon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</header>
`;

exports[`Header renders correctly for smartphone 1`] = `
<header
  className="MuiPaper-root MuiAppBar-root MuiAppBar-positionSticky MuiAppBar-colorPrimary css-anjygb-Header MuiPaper-elevation4"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular toolBar MuiToolbar-gutters"
  >
    <div>
      <img
        alt="MeilleursAgents PRO"
        className="logo"
        src={[Function]}
      />
      <div
        className="MuiChip-root css-1we3e77-UnreadMessagesCounter MuiChip-colorPrimary"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root MuiChip-icon MuiChip-iconColorPrimary"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </svg>
        <span
          className="MuiChip-label"
        >
          <strong>
            73
          </strong>
        </span>
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiIconButton-root css-hna2n5-AgencySelector"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root css-15pd8ov-AgencySelector"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 4H4v2h16V4zm1 10v-2l-1-5H4l-1 5v2h1v6h10v-6h4v6h2v-6h1zm-9 4H6v-4h6v4z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</header>
`;
